--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Team Armstrong
+title: <img src="https://github.com/TeamArmstrong/teamarmstrong.github.io/raw/master/images/Melissa.jpg" alt="Melissa">
 includes_dir: _includes
