--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
 title: <img src="https://github.com/TeamArmstrong/teamarmstrong.github.io/raw/master/images/armstrong-long2.png" alt="logo">
 includes_dir: _includes
-markdown: kramdown
+markdown: redcarpet
 redcarpet:
   extensions:
     - no_intra_emphasis
